@@ -1,15 +1,15 @@
 #define RUBY_VERSION "1.8.7"
-#define RUBY_RELEASE_DATE "2009-01-29"
+#define RUBY_RELEASE_DATE "2009-02-02"
 #define RUBY_VERSION_CODE 187
-#define RUBY_RELEASE_CODE 20090129
-#define RUBY_PATCHLEVEL 101
+#define RUBY_RELEASE_CODE 20090202
+#define RUBY_PATCHLEVEL 102
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
 #define RUBY_VERSION_TEENY 7
 #define RUBY_RELEASE_YEAR 2009
-#define RUBY_RELEASE_MONTH 1
-#define RUBY_RELEASE_DAY 29
+#define RUBY_RELEASE_MONTH 2
+#define RUBY_RELEASE_DAY 2
 
 #ifdef RUBY_EXTERN
 RUBY_EXTERN const char ruby_version[];
@@ -27,6 +27,7 @@ RUBY_EXTERN const char *ruby_copyright;
 
 #define RUBY_RELEASE_STR "patchlevel"
 #define RUBY_RELEASE_NUM RUBY_PATCHLEVEL
+
 
 
 
