@@ -1,3 +1,9 @@
+Mon Feb  2 11:34:51 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* variable.c (autoload_delete, autoload_file): should not delete
+	  autoload table, since it may be shared with duplicated modules.
+	  [ruby-core:19181]
+
 Thu Jan 29 11:54:22 2009  Tadayoshi Funaba  <tadf@dotrb.org>
 
 	* lib/date.rb (today,now): should produce own instances.
